--- a/reveal.js/css/theme/gradle.css
+++ b/reveal.js/css/theme/gradle.css
@@ -496,3 +496,7 @@ section.has-dark-background h3 {
 .note table, .colist table {
     border: 0px;
 }
+
+table.frame-all {
+    border-width: 0px;
+}
